get agents working
